# laboneq-applications

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  renovate.json5  requirements-dev.txt  requirements-lint.txt  tbump.toml
automatic_tuneup/: .gitignore  README.md  pyproject.toml  settings.ini
automatic_tuneup/monitor/: Dockerfile  main.py
automatic_tuneup/tests/: conftest.py  pytest.ini  test_amplitude_rabi_scan.py  test_ramsey_scan.py  test_scan.py  test_spec_scan.py  test_tuneup.py
automatic_tuneup/tuneup/: analyzer.py  configs.py  demo_tuneup.py  experiment.py  helper.py  minituneup.py  scan.py  tuneup_logging.py
ci/: coveragerc
docs/: README.md  conftest.py  constraints.txt  known_words.txt  mkdocs.yml  pyproject.toml  requirements-ext.txt  requirements.txt
docs/internal/: deploy.md  install.md
docs/sources/: index.md  release_notes.md
docs/sources/how-to-guides/: index.md
docs/sources/how-to-guides/images/tuneup_active_reset/: weights.p
docs/sources/how-to-guides/sources/: T1.ipynb  amplitude_fine.ipynb  amplitude_rabi.ipynb  build_taskbook.ipynb  dispersive_shift.ipynb  echo.ipynb  iq_blobs.ipynb  options.ipynb  qubit_spectroscopy.ipynb  ramsey.ipynb  resonator_spectroscopy.ipynb  resonator_spectroscopy_dcbias.ipynb  time_traces.ipynb
docs/sources/how-to-guides/sources/01_superconducting_qubits/: index.md
docs/sources/how-to-guides/sources/01_superconducting_qubits/01_workflows/: 01_resonator_spectroscopy.ipynb  02_resonator_spectroscopy_dcbias.ipynb  03_qubit_spectroscopy.ipynb  04_amplitude_rabi.ipynb  05_ramsey.ipynb  06_drag_q_scaling.ipynb  07_lifetime_measurement.ipynb  08_echo.ipynb  09_amplitude_fine.ipynb  10_dispersive_shift.ipynb  11_iq_blobs.ipynb  12_time_traces.ipynb  13_qnd_measurement.ipynb  14_photon_number_time_resolve.ipynb  14_zz_coupling.ipynb  amplitude_fine.ipynb  amplitude_rabi.ipynb  dispersive_shift.ipynb  echo.ipynb  iq_blobs.ipynb  lifetime_measurement.ipynb  qubit_spectroscopy.ipynb  ramsey.ipynb  resonator_spectroscopy.ipynb  resonator_spectroscopy_dcbias.ipynb  time_traces.ipynb
docs/sources/how-to-guides/sources/01_superconducting_qubits/02_pulse_sequences/01_tuneup/: 00_readout_raw_data.ipynb  01_cw_resonator_spec_shfsg_shfqa_shfqc.ipynb  01_spec_uhfqa_hdawg.ipynb  02_pulsed_resonator_spec_shfsg_shfqa_shfqc.ipynb  03_resonator_spec_vs_power_shfsg_shfqa_shfqc.ipynb  04_propagation_delay.ipynb  05_qubit_spectroscopy.ipynb  06_amplitude_rabi.ipynb  07_ramsey.ipynb  08_e-f_transition_spectroscopy_shfsg_shfqc.ipynb  09_e-f_gate_tuneup_shfsg_shfqc.ipynb  10_CR_gate_tuneup_shfsg_shfqc.ipynb  11_readoutweight_calibration_shfsg_shfqa_shfqc.ipynb  12_length_rabi_experiment_shfsg_shfqa_shfqc_hdawg.ipynb  13_T1_experiment_shfsg_shfqa_shfqc_hdawg.ipynb  14_Ramsey_experiment_sampled_pulse_shfsg_shfqa_shfqc_hdawg.ipynb  (+3 more)
docs/sources/how-to-guides/sources/01_superconducting_qubits/03_tuneup_guides/: 00_tuneup_qubits.ipynb  01_tuneup_active_reset.ipynb  02_tuneup_twpa.ipynb
docs/sources/how-to-guides/sources/02_spin_qubits/: 00_neartime_callback_sweeps.ipynb  01_QCoDeS_sweeps.ipynb  02_MFLI_cw_acquisition.ipynb  03_UHFLI_pulsed_acquisition.ipynb  04_HDAWG_pulse_sequences.ipynb  index.md
docs/sources/how-to-guides/sources/03_color_centers/: 00_shfsg_basic_experiments.ipynb  01_shfsg_timetagger_basic_experiments.ipynb  index.md
docs/sources/how-to-guides/sources/04_qasm/: 01_VQE_Qiskit.ipynb  02_RandomizedBenchmarking_from_Qiskit.ipynb  index.md
docs/sources/reference/: dsl.md  index.md  testing.md  typing.md
docs/sources/reference/analysis/: amplitude_fine.md  amplitude_rabi.md  calibration_traces_rotation.md  dispersive_shift.md  drag_q_scaling.md  echo.md  fitting_helpers.md  index.md  iq_blobs.md  lifetime_measurement.md  plotting_helpers.md  qubit_spectroscopy.md  ramsey.md  resonator_spectroscopy.md  time_traces.md
docs/sources/reference/contrib/: index.md
docs/sources/reference/contrib/analysis/: amplitude_rabi_chevron.md  calibrate_cancellation.md  index.md  measure_gain_curve.md  measurement_qndness.md  scan_pump_parameters.md  signal_propagation_delay.md  single_qubit_randomized_benchmarking.md  time_rabi.md  time_rabi_chevron.md
docs/sources/reference/contrib/experiments/: amplitude_rabi_chevron.md  calibrate_cancellation.md  index.md  measure_gain_curve.md  measurement_qndness.md  scan_pump_parameters.md  signal_propagation_delay.md  single_qubit_randomized_benchmarking.md  spin_locking.md  time_rabi.md  time_rabi_chevron.md  twpa_spectroscopy.md
docs/sources/reference/core/: build_experiment.md  handles.md  index.md  options.md  quantum_operations.md  utils.md  validation.md
docs/sources/reference/experiments/: T1.md  amplitude_fine.md  amplitude_rabi.md  dispersive_shift.md  drag_q_scaling.md  echo.md  index.md  iq_blobs.md  lifetime_measurement.md  options.md  qubit_spectroscopy.md  qubit_spectroscopy_amplitude.md  rabi.md  ramsey.md  resonator_spectroscopy.md  resonator_spectroscopy_amplitude.md  time_traces.md
docs/sources/reference/logbook/: combined_store.md  core.md  folder_store.md  index.md  logging_store.md  serializer.md
docs/sources/reference/qpu_types/: index.md  qpu.md  tunable_transmon.md  twpa.md
docs/sources/reference/tasks/: compile_experiment.md  extract_sweep_results.md  index.md  parameter_updating.md  run_experiment.md  update_qubits.md
docs/sources/reference/testing/: experiment_verifier.md  index.md
docs/sources/reference/workflow/: blocks.md  core.md  exceptions.md  graph.md  index.md  options.md  reference.md  result.md  task.md  taskbook.md  taskview.md  workflow.md
docs/sources/tutorials/: index.md
docs/sources/tutorials/sources/: build_taskbook.ipynb  build_workflow.ipynb  experiment_workflows.ipynb  getting_started.ipynb  logbooks.ipynb  options.ipynb  quantum_operations.ipynb  tasks.ipynb  workflows.ipynb  writing_experiments.ipynb
docs/sources/tutorials/workflow/: index.md
docs/sources/tutorials/workflow/sources/: build_workflow.ipynb  options.ipynb  workflow_language.ipynb
(+453 files in other folders)
