[build-system]
requires = [ "setuptools>=65.0.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "laboneq_tuneup"
description = "Qubit tuneup framework using LabOneQ"
version = "0.1"
license = {text = "Apache 2.0"}
requires-python = ">=3.9"
authors = [
    { name = "Zurich Instruments Development Team", email = "info@zhinst.com" },
]
keywords = [
    "quantum",
    "sdk",
    "zhinst",
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "laboneq~=2.16.0",
    "networkx",
    "requests",
    "fastapi",
    "uvicorn",
]

[tool.isort]
profile = "black"
src_paths = ["automatic_tuneup", "tests", "examples", "monitors"]

[tool.setuptools]
zip-safe = false


[tool.setuptools.packages.find]
where = ["."]
include = ["tuneup"]
namespaces = false

